Bug 851899 - Fix some compiler warnings in mailnews/imap/src/nsImap*.cpp. r=irving